--- a/web/src/common/styles/theme-dark.css
+++ b/web/src/common/styles/theme-dark.css
@@ -35,10 +35,6 @@ body {
 
 /* #endregion */
 
-.pf-c-radio {
-    --pf-c-radio__label--Color: var(--ak-dark-foreground);
-}
-
 /* Global page background colour */
 .pf-c-page {
     --pf-c-page--BackgroundColor: var(--ak-dark-background);
@@ -213,10 +209,6 @@ select[multiple] option:checked {
     color: var(--ak-dark-background);
 }
 
-.pf-c-input-group {
-    --pf-c-input-group--BackgroundColor: transparent;
-}
-
 select.pf-c-form-control {
     --pf-c-form-control__select--BackgroundUrl: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%23fafafa' d='M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z'/%3E%3C/svg%3E");
 }
@@ -238,16 +230,7 @@ select.pf-c-form-control {
 
 /* #endregion */
 
-/* select toggle */
-.pf-c-select__toggle::before {
-    --pf-c-select__toggle--before--BorderTopColor: var(--ak-dark-background-lighter);
-    --pf-c-select__toggle--before--BorderRightColor: var(--ak-dark-background-lighter);
-    --pf-c-select__toggle--before--BorderLeftColor: var(--ak-dark-background-lighter);
-}
-
-.pf-c-select__toggle.pf-m-typeahead {
-    --pf-c-select__toggle--BackgroundColor: Field;
-}
+/* #region Select */
 
 .pf-c-select__menu {
     --pf-c-select__menu--BackgroundColor: var(--ak-dark-background-light-ish);
